--- a/charts/jaeger/templates/allinone-deploy.yaml
+++ b/charts/jaeger/templates/allinone-deploy.yaml
@@ -9,7 +9,7 @@ metadata:
     prometheus.io/port: "14269"
     prometheus.io/scrape: "true"
 spec:
-  {{- if .Values.allInOne.replicas }}
+  {{- if hasKey .Values.allInOne "replicas" }}
   replicas: {{ .Values.allInOne.replicas }}
   {{- end }}
   strategy:
@@ -30,6 +30,10 @@ spec:
         prometheus.io/port: "14269"
         prometheus.io/scrape: "true"
     spec:
+      {{- with .Values.allInOne.imagePullSecrets }}
+      imagePullSecrets:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}    
       containers:
         - env:
           {{- if .Values.allInOne.extraEnv }}
