--- a/charts/rancher/Chart.yaml
+++ b/charts/rancher/Chart.yaml
@@ -1,7 +1,7 @@
 apiVersion: v2
 name: rancher
 description: Install Rancher Server to manage Kubernetes clusters across providers.
-version: 2.8.4
+version: 2.8.4-v1
 appVersion: v.2.8.4
 kubeVersion: < 1.35.0-0
 home: https://rancher.com
