--- a/charts/ara/values.yaml
+++ b/charts/ara/values.yaml
@@ -37,7 +37,8 @@ ingress:
     enabled: false
     host: ara.domain
 # Resource limits/request
-resources: {}
+resources:
+  {}
 replicas: 1
 # Persistent volume for SQLite DB:
 persistentVolumes:
